* remove some code in order to prevent a large gap between board title and description. Signed-off-by:Thorsten Eurich <thorsten@eurich.de>

--- a/themes/default/css/index.css
+++ b/themes/default/css/index.css
@@ -4056,11 +4056,6 @@ a.help .icon {
 	.board_lastposter {
 		display: block;
 	}
-	.board_name:after {
-		display: block;
-		clear: both;
-		content: "";
-	}
 	/* Playing silly buggers with a sidebar menu option for narrow screens. */
 	#main_container {
 		position: relative;
